# Lightning-Engine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md  build.py  glgen.py  lsan.supp  macos-window.m  premake5.lua  setup.sh  setup_files.sh
Lightning-Engine/: Makefile  premake5.lua
Lightning-Engine/include/: window.hh
Lightning-Engine/include/li/: application.hh  assert.h  dl.h  entry.h  event.hh  event_dispatcher.hh  gl.h  keymap.h  li.h  memory.h  win.h  window.hh
Lightning-Engine/include/li/geometry/: geometry.hh  mesh.hh
Lightning-Engine/include/li/gl/: buffer.hh  shader.hh  state.hh  util.hh
Lightning-Engine/include/li/math/: matrix.hh  util.hh  vector.hh
Lightning-Engine/include/li/platform/: xlib.h
Lightning-Engine/include/li/util/: asprintf.h  list.h  log.h  logger.hh
Lightning-Engine/src/: application.cc  assert.c  li_entry.c  li_gl.c  li_win.c  memory.c  posix_dl.c  test.h  win.c  win32_dl.c  window.cc
Lightning-Engine/src/gl/: shader.cc
Lightning-Engine/src/platform/posix/: dl.c  entry.c
Lightning-Engine/src/platform/windows/: dl.c  entry.c  keymap.c  win.c
Lightning-Engine/src/platform/xlib/: keymap.c  win.c
Lightning-Engine/src/util/: asprintf.c  list.c  log.c  logger.cc  memory.c
Lightning-Engine/src/win/: a.out  cocoa_keymap.m  cocoa_win.m  macos_keymap.c  macos_win.m  osx_win2.m  win32_keymap.c  win32_win.c  xlib_keymap.c  xlib_win.c
Sandbox/: Makefile  premake5.lua
Sandbox/src/: main.c  main.cc  windows-window.c
android/: build.gradle  local.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
engine/include/: li.h  li_dl.h  li_gl.h  li_vk.h  li_win.h
engine/include/li/: bool.h  dl.h  input.h  key.h  log.h  std.h  win.h
engine/include/li/dl/: dl.h  dlfcn.h  dyld.h  impl.h  win32.h
engine/include/li/main/: android.h  ios.h  main.h
engine/include/li/view/: android.h  impl.h  ios.h  view.h
engine/include/li/win/: cocoa.h  impl.h  win.h  win32.h  xlib.h
engine/src/: dl.c  li.c  std.c  win.c
engine/src/dl/: dl.c  dlfcn.c  dyld.c  impl.c  win32.c
engine/src/main/: android.c  main.c  main_android.c  main_ios.m
engine/src/view/: android.c  impl.c  ios.m  ios_app.m
engine/src/win/: cocoa.m  impl.c  win.c  win32.c  xlib.c
hack/: test.c
sandbox/include/: sandbox.h
sandbox/src/: main.c  sandbox.c
src/: main.cc
